combined working version milestone.

--- a/template/realispic-template.html
+++ b/template/realispic-template.html
@@ -14,14 +14,12 @@
     <script src="<!--TMPL_VAR url -->"></script>
     <!-- /TMPL_LOOP -->
     
-    <style type="text/css"><!-- TMPL_VAR css --></style>
+    <style type="text/css"><!-- TMPL_VAR inline-css --></style>
   </head>
   <body>
     <div id="content">
     </div>
-
-
-    <!-- JavaScript -->
-    <script><!-- TMPL_VAR javascript --></script>
+    <!-- Compiled Javascript -->
+    <script src="<!--TMPL_VAR js -->"></script>
   </body>
 </html>
