boostrap system added.

--- a/template/realispic-template.html
+++ b/template/realispic-template.html
@@ -10,8 +10,12 @@
     <!-- /TMPL_LOOP -->
 
     <!-- JavaScript Libraries -->
-    <!-- TMPL_LOOP js-include -->
+    <!-- TMPL_LOOP react-js -->
     <script src="<!--TMPL_VAR url -->"></script>
+    <!-- /TMPL_LOOP -->
+    
+    <!-- TMPL_LOOP js-include -->
+    <script type="text/jsx" src="<!--TMPL_VAR url -->"></script>
     <!-- /TMPL_LOOP -->
     
     <style type="text/css"><!-- TMPL_VAR inline-css --></style>
@@ -20,6 +24,6 @@
     <div id="content">
     </div>
     <!-- Compiled Javascript -->
-    <script src="<!--TMPL_VAR js -->"></script>
+    <script type="text/jsx" src="<!--TMPL_VAR js -->"></script>
   </body>
 </html>
