fix includes: 1. distinguish between internal js and external js 2. correctly include css that does not end with css.

--- a/template/realispic-template.html
+++ b/template/realispic-template.html
@@ -10,7 +10,7 @@
     <!-- /TMPL_LOOP -->
 
     <!-- JavaScript Libraries -->
-    <!-- TMPL_LOOP react-js -->
+    <!-- TMPL_LOOP external-js -->
     <script src="<!--TMPL_VAR url -->"></script>
     <!-- /TMPL_LOOP -->
     
